syntax = "proto3";
package protobuf;

option go_package = "github.com/dlock_raft/protobuf";

import "protobuf/CandidateVotes.proto";
import "protobuf/RecoverEntries.proto";
import "protobuf/AppendEntries.proto";

service AppendEntries {
    rpc RPCAppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

service RecoverEntries {
    rpc RPCRecoverEntries (RecoverEntriesRequest) returns (RecoverEntriesResponse) {}
}

service CandidateVotes {
    rpc RPCCandidateVotes (CandidateVotesRequest) returns (CandidateVotesResponse) {}
}