syntax = "proto3";
package protobuf;
option go_package = "github.com/dlock_raft/protobuf";

import "protobuf/entry.proto";

message RecoverEntriesRequest {

    // the current term
    uint64 term=1;

    // leader id
    uint32 nodeId=2;

    // previous entry index
    uint64 prevEntryIndex=3;

    // previous entry term
    uint64 prevEntryTerm=4;

}

message RecoverEntriesResponse {

    // the current term
    uint64 term=1;

    // leader id
    uint32 nodeId=2;

    // previous entry index
    uint64 prevEntryIndex=3;

    // previous entry term
    uint64 prevEntryTerm=4;

    // boolean tag for recovering at least one entry
    bool recovered=5; 

    // entries in detail
    repeated Entry entryList=6;

}